Updated to platform version 7.1.1